--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
 <div id="container">
 <br>
-<img src="becki.PNG"></img>
+<img src="https://github.com/mataregames/mataregames.github.io/blob/main/becki.PNG"></img>
 <br>
 <br>
 <h1><i>&nbsp ABOUT US</i></h1>
