--- a/soundchallenger.html
+++ b/soundchallenger.html
@@ -12,7 +12,7 @@
 <div class="open" id="setup">
 <br>
 <br>
-<img id="logo" src="becki.png"></img>
+<img id="logo" src="mataregames.github.io/becki.PNG"></img>
 <h1 >ENTER THE NAMES OF THE PARTICIPANTS IN THE TEXTBOX BELOW</h1>
 <br>
 <input type="text" id="box" placeholder="Type Here...." />&nbsp&nbsp&nbsp<button id="eda">Add Name</button>
