--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <br>
 <h1>matare games.</h1>
 <br>
-<img src="https://github.com/mataregames/mataregames.github.io/blob/main/becki.PNG" alt="Matare Games icon"></img>
+<img src="mataregames.github.io/becki.PNG" alt="Matare Games icon"></img>
 <br>
 <br>
 <br>
