--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="container">
-<img src="https://github.com/mataregames/mataregames.github.io/blob/main/becki.PNG"></img>
+<img src="mataregames.github.io/becki.PNG"></img>
 <br>
 <h1>WELCOME TO  THE MATARE GAMES BLOGPAGE</h1>
 <br>
