Soumd icons done

--- a/soundchallenger.html
+++ b/soundchallenger.html
@@ -50,16 +50,16 @@ Welcome to the SOUND CHALLENGER Game.Tip: Hit the timer icon to start the 5 seco
 </div>
 <br>
 <div id="icon_section">
-<img id="full_button" src="fullscreen_icon.png" alt="fullscreen icon"></img>
+<img id="full_button" src="mataregames.github.io/fullscreen_icon.PNG" alt="fullscreen icon"></img>
 <br>
 <br>
-<img id="participants_button" src="participants_icon.png" alt="participants icon"></img>
+<img id="participants_button" src="mataregames.github.io/participants_icon.PNG" alt="participants icon"></img>
 <br>
 <br>
-<a href="help.html"><img src="help_icon.png" alt="help icon"></img></a>
+<a href="help.html"><img src="mataregames.github.io/help_icon.PNG" alt="help icon"></img></a>
 <br>
 <br>
-<img id="timertap" src="timer_icon.png" alt="Timer icon"></img>
+<img id="timertap" src="mataregames.github.io/timer_icon.PNG" alt="Timer icon"></img>
 </div>
 </div>
 </div>
