--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta property="og:title" content="Matare Games"/>
 <meta property="og:description" content=""The best free games to break the ice on your videocon event"/>
 <meta property="og:site_name" content="Matare Games"/>
+<meta property=”og:image” content=”mataregames.github.io/becki.PNG”/>
 <meta property="og:url" content="https://mataregames.github.io"/>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="keywords" content="fun,takuda,sean,matare,cards,videoconferencing,games,zoom,free,tacode,play,friends,family,gatherings">
