--- a/blog.html
+++ b/blog.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 <div id="container">
-<img src="mataregames.github.io/becki.PNG"></img>
+<img src="https://mataregames.github.io/becki.PNG"></img>
 <br>
 <h1>WELCOME TO  THE MATARE GAMES BLOGPAGE</h1>
 <br>
 <div class="news">
 <h2>Watch this space for our new MY GAME feature!</h2>
-<img src="mataregames.github.io/n1.PNG" alt="Image showing the My Game option under development"></img>
+<img src="https://mataregames.github.io/n1.PNG" alt="Image showing the My Game option under development"></img>
 <h3>posted on:<i>10 May 2021</i></h3>
 <h4> A new dimension is going to be added to the game platform,
 My Game! This mode will allow users to be able to  create their own challenges and questions for the Icebreaker and Challenger games
