--- a/games.html
+++ b/games.html
@@ -17,7 +17,7 @@
 <br>
 <h2>SOUND CHALLENGES</h2>
 <br>
-<img src="mataregames.github.io/game_icon.PNG" alt="Image showing the game icon" ></img>
+<img src="https://mataregames.github.io/game_icon.PNG" alt="Image showing the game icon" ></img>
 <br>
 This game will entertain your guests as they will be asked some questions ,reveal some of their secrets ;) and get to know each other well.
 <br>
@@ -30,7 +30,7 @@ This game will entertain your guests as they will be asked some questions ,revea
 <br>
 <h2>ICE BREAKER</h2>
 <br>
-<img src="mataregames.github.io/game_icon.PNG"></img>
+<img src="https://mataregames.github.io/game_icon.PNG"></img>
 <br>
 Get ready to be silly and have fun as everyone tries to make the best sound imitations of different items on the block.
 <br>
