--- a/help.html
+++ b/help.html
@@ -15,7 +15,7 @@ li{color: black;
 </style>
 </head>
 <body>
-<img src="mataregames.github.io/becki.PNG" alt="Matare Games Icon"></img>
+<img src="https://mataregames.github.io/becki.PNG" alt="Matare Games Icon"></img>
 <br>
 <h1>Welcome to the TROUBLESHOOTING PAGE</h1>
 <hr>
