--- a/icebreaker.html
+++ b/icebreaker.html
@@ -12,7 +12,7 @@
 <div class="open" id="setup">
 <br>
 <br>
-<img id="logo" src="mataregames.github.io/becki.PNG"></img>
+<img id="logo" src="https://mataregames.github.io/becki.PNG"></img>
 <h1 >ENTER THE NAMES OF THE PARTICIPANTS IN THE TEXTBOX BELOW</h1>
 <br>
 <input type="text" id="box" placeholder="Type Here...." />&nbsp&nbsp&nbsp<button id="eda">Add Name</button>
@@ -46,13 +46,13 @@ Welcome to the Ice-Breaker Game.Press the play button below to begin.
 </div>
 <br>
 <div id="icon_section">
-<img id="full_button" src="mataregames.github.io/fullscreen_icon.PNG" alt="fullscreen icon"></img>
+<img id="full_button" src="https://mataregames.github.io/fullscreen_icon.PNG" alt="fullscreen icon"></img>
 <br>
 <br>
-<img id="participants_button" src="mataregames.github.io/participants_icon.PNG" alt="participants icon"></img>
+<img id="participants_button" src="https://mataregames.github.io/participants_icon.PNG" alt="participants icon"></img>
 <br>
 <br>
-<a href="help.html"><img src="mataregames.github.io/help_icon.PNG" alt="help icon"></img></a>
+<a href="help.html"><img src="https://mataregames.github.io/help_icon.PNG" alt="help icon"></img></a>
 </div>
 </div>
 </div>
