--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta property="og:title" content="Matare Games"/>
 <meta property="og:description" content=""The best free games to break the ice on your videocon event"/>
 <meta property="og:site_name" content="Matare Games"/>
-<meta property=”og:image” content=”mataregames.github.io/becki.PNG”/>
+<meta property=”og:image” content=”https://mataregames.github.io/becki.PNG”/>
 <meta property="og:url" content="https://mataregames.github.io"/>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="keywords" content="fun,takuda,sean,matare,cards,videoconferencing,games,zoom,free,tacode,play,friends,family,gatherings">
@@ -32,7 +32,7 @@
 <br>
 <h1>matare games.</h1>
 <br>
-<img src="mataregames.github.io/becki.PNG" alt="Matare Games icon"></img>
+<img src="https://mataregames.github.io/becki.PNG" alt="Matare Games icon"></img>
 <br>
 <br>
 <br>
