--- a/soundchallenger.html
+++ b/soundchallenger.html
@@ -12,7 +12,7 @@
 <div class="open" id="setup">
 <br>
 <br>
-<img id="logo" src="mataregames.github.io/becki.PNG"></img>
+<img id="logo" src="https://mataregames.github.io/becki.PNG"></img>
 <h1 >ENTER THE NAMES OF THE PARTICIPANTS IN THE TEXTBOX BELOW</h1>
 <br>
 <input type="text" id="box" placeholder="Type Here...." />&nbsp&nbsp&nbsp<button id="eda">Add Name</button>
@@ -50,16 +50,16 @@ Welcome to the SOUND CHALLENGER Game.Tip: Hit the timer icon to start the 5 seco
 </div>
 <br>
 <div id="icon_section">
-<img id="full_button" src="mataregames.github.io/fullscreen_icon.PNG" alt="fullscreen icon"></img>
+<img id="full_button" src="https://mataregames.github.io/fullscreen_icon.PNG" alt="fullscreen icon"></img>
 <br>
 <br>
-<img id="participants_button" src="mataregames.github.io/participants_icon.PNG" alt="participants icon"></img>
+<img id="participants_button" src="https://mataregames.github.io/participants_icon.PNG" alt="participants icon"></img>
 <br>
 <br>
-<a href="help.html"><img src="mataregames.github.io/help_icon.PNG" alt="help icon"></img></a>
+<a href="help.html"><img src="https://mataregames.github.io/help_icon.PNG" alt="help icon"></img></a>
 <br>
 <br>
-<img id="timertap" src="mataregames.github.io/timer_icon.PNG" alt="Timer icon"></img>
+<img id="timertap" src="https://mataregames.github.io/timer_icon.PNG" alt="Timer icon"></img>
 </div>
 </div>
 </div>
