--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="google-site-verification" content="TvSlpFfz6HPG3UD1I1rE9l27h-KVve3iccCTWCXufUI" />
 <meta name="description" content="Bringing people together through games and fun">
 <meta name="robots" content="index,follow">
 <meta property="og:title" content="Matare Games"/>
